--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "gulp-util": "~2.2.12",
     "tiny-lr": "0.0.5",
     "gulp-open": "~0.2.7",
-    "gulp-uncss": "~0.1.6"
+    "gulp-uncss": "~0.1.6",
+    "event-stream": "~3.1.0",
+    "gulp-header": "~1.0.2",
+    "gulp-livereload": "~0.2.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
