--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "gloups",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "authors": [
     "dhoko"
   ],
@@ -23,6 +23,7 @@
     "backbone": "~1.1.0",
     "jquery": "~2.0.3",
     "lodash": "~2.4.1",
-    "normalize-css": "~2.1.3"
+    "normalize-css": "~2.1.3",
+    "swiftclick": "~1.1.1"
   }
 }
