--- a/src/generators/backbone/base/package.json
+++ b/src/generators/backbone/base/package.json
@@ -17,7 +17,7 @@
     "gulp-open": "~0.2.7",
     "gulp-uncss": "~0.1.6",
     "event-stream": "~3.1.0",
-    "gulp-header": "~1.0.2",
+    "gulp-partial-to-script": "~1.0.0",
     "gulp-livereload": "~0.2.0"
   },
   "scripts": {
