--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "cli-color": "~0.2.3",
     "inquirer": "~0.4.0",
     "prompt": "~0.2.12",
-    "wrench": "~1.5.6"
+    "wrench": "~1.5.6",
+    "js-beautify": "~1.4.2"
   },
   "devDependencies": {},
   "scripts": {
