--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Serval",
+  "name": "serval",
   "version": "1.0.0",
   "description": "Create a webapp must be KISS",
   "author": "dhoko",
