--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "inquirer": "~0.4.0",
     "prompt": "~0.2.12",
     "wrench": "~1.5.6",
-    "js-beautify": "~1.4.2"
+    "js-beautify": "~1.4.2",
+    "request": "~2.34.0"
   },
   "devDependencies": {},
   "bin": {
@@ -32,7 +33,6 @@
     "cli",
     "generator"
   ],
-  "author": "dhoko",
   "license": "BSD",
   "bugs": {
     "url": "https://github.com/dhoko/Serval/issues"
